Adding new results and Code

--- a/Codingan DNN/New DNN/DNN dataset 10% IID.ipynb
+++ b/Codingan DNN/New DNN/DNN dataset 10% IID.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "eca0697b",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from tensorflow.keras.models import Sequential\n",
-    "# from tensorflow.keras.layers import Dense\n",
-    "# from tensorflow.keras.utils import to_categorical\n",
-    "# from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import seaborn as sns"
    ]
   },
@@ -32,7 +32,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\F'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\F'\n",
-      "C:\\Users\\Just Mine\\AppData\\Local\\Temp\\ipykernel_6436\\2830696203.py:1: SyntaxWarning: invalid escape sequence '\\F'\n",
+      "C:\\Users\\Just Mine\\AppData\\Local\\Temp\\ipykernel_8764\\2830696203.py:1: SyntaxWarning: invalid escape sequence '\\F'\n",
       "  dataset = pd.read_csv(\".\\Fix CICIoT2023 10%.csv\")\n"
      ]
     }
