--- a/Codingan DNN/New DNN/DNN dataset 10% IID IPCA.ipynb
+++ b/Codingan DNN/New DNN/DNN dataset 10% IID IPCA.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "# from sklearn.model_selection import train_test_split\n",
     "# from sklearn.preprocessing import StandardScaler\n",
     "# from sklearn.model_selection import train_test_split\n",
@@ -17,7 +17,7 @@
     "# from tensorflow.keras.layers import Dense\n",
     "# from tensorflow.keras.utils import to_categorical\n",
     "# from sklearn.metrics import classification_report, confusion_matrix\n",
-    "import seaborn as sns"
+    "# import seaborn as sns"
    ]
   },
   {
@@ -32,7 +32,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\C'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\C'\n",
-      "C:\\Users\\Just Mine\\AppData\\Local\\Temp\\ipykernel_12652\\2066939527.py:1: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\Just Mine\\AppData\\Local\\Temp\\ipykernel_8844\\2066939527.py:1: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  dataset = pd.read_csv(\".\\CICIoT2023_IPCASTD10%.csv\")\n"
      ]
     }
